Mon May  8 19:14:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* In MultiMatch::match(), factor out adding of a new mset to
	  a separate method, add_next_sub_mset().

Mon May  8 16:42:24 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Moved specification of mset comparison method into Match Options.
	  Renamed the comparator class OmMSetCmp (from MSetCmp), and created
	  a method in OmMatchOptions to return an appropriate instance.
	  Made comparator a member of LocalMatch and MultiMatch, which gets
	  set by the set_options() method.

Mon May  8 16:33:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved testsuite module to a new directory.  Tests within the
	  other source directories should be able to link to it easily.

Mon May  8 14:34:21 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved mostly common implementation of test suite main() functions
	  into test_driver::main().

Fri May  5 18:55:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Pass MatchOptions object down to LocalMatch, rather than
	  interpreting at API level.

Fri May  5 16:55:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add option to MatchOptions to set a maximum number of terms to
	  OR together in large probabalistic queries.

Thu May  4 16:58:08 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* ProgClient::get_mset() now returns actual results rather than
	  accidentally made up numbers.

Thu May  4 16:26:34 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The testsuite driver now supports running a single test by name.

	* apitest and internaltest now support an extra argument which
	  specifies the name of a single test to run.

Tue May  2 18:56:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* get_mset() now actually asynchronous.

Tue May  2 18:22:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
